More changes to fix the font size on mobile browsers.

--- a/public/style.css
+++ b/public/style.css
@@ -1,13 +1,13 @@
 body
 {
-    font-size:200%;
+    font-size:175%;
     font-family:Verdana, Geneva, sans-serif;
     background-color:LightSteelBlue;
 }
 
 input
 {
-    font-size:100%;
+    font-size:75%;
     font-family:Verdana, Geneva, sans-serif;
 }
 
